--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -28,26 +28,6 @@ body {
     border-radius: 10px;
 }
 
-.scrollbar {
-    scrollbar-color: #2e343d transparent;
-    scrollbar-width: thin;
-}
-.scrollbar::-webkit-scrollbar {
-    width: 8px;
-    height: 6px;
-}
-.scrollbar::-webkit-scrollbar-track {
-    background: transparent;
-}
-.scrollbar::-webkit-scrollbar-thumb {
-    background-color: transparent;
-    border-radius: 10px;
-    opacity: 0;
-}
-.scrollbar:hover::-webkit-scrollbar-thumb {
-    background-color: #2e343d;
-    opacity: 1;
-}
 
 #ReactSimpleImageViewer {
     z-index: 99;
@@ -63,4 +43,14 @@ body {
     line-height: 36px;
     text-align: center;
     padding-bottom: 10px;
+}
+.contacts{
+    &::-webkit-scrollbar {
+        width: 0.1rem;
+        &-thumb {
+          background-color: #14050539;
+          width: 0.1rem;
+          border-radius: 1rem;
+        }
+      }
 }
